docs: :memo: add doc for createOpening
